unpackaged/main/default/objects/Bulk_Renewal__c/Bulk_Renewal__c.object-meta.xml
<CustomObject>
    <description>Object to record the renewal applications created from bulk renewing.</description>
    <label>Bulk Renewal</label>
    <nameField>
        <displayFormat>BR{000000}</displayFormat>
        <label>Bulk Renewal Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bulk Renewals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>