unpackaged/main/default/objects/Bulk_Renewal__c/fields/Application_Contact__c.field-meta.xml
<CustomField>
    <fullName>Application_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Bulk Renewals</relationshipLabel>
    <relationshipName>Bulk_Renewals</relationshipName>
    <type>Lookup</type>
</CustomField>