unpackaged/main/default/objects/Bulk_Renewal__c/fields/Create_Sage_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Create_Sage_Invoice__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Sage Invoice</label>
    <type>Checkbox</type>
</CustomField>