unpackaged/main/default/objects/Bulk_Renewal__c/fields/Head_Office__c.field-meta.xml
<CustomField>
    <fullName>Head_Office__c</fullName>
    <label>Head Office</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Bulk Renewals</relationshipLabel>
    <relationshipName>Bulk_Renewals</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>