unpackaged/main/default/objects/Bulk_Renewal__c/fields/Invoice_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Email_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Invoice Email Sent</label>
    <type>Checkbox</type>
</CustomField>