unpackaged/main/default/objects/Bulk_Renewal__c/fields/Payment_Reference__c.field-meta.xml
<CustomField>
    <fullName>Payment_Reference__c</fullName>
    <formula>Sage_Invoice__r.Invoice_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Reference</label>
    <type>Text</type>
</CustomField>