unpackaged/main/default/objects/Bulk_Renewal__c/fields/Queueable__c.field-meta.xml
<CustomField>
    <fullName>Queueable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Queueable</label>
    <type>Checkbox</type>
</CustomField>