unpackaged/main/default/objects/Bulk_Renewal__c/fields/Sage_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Sage_Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sage Invoice</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Bulk Renewals</relationshipLabel>
    <relationshipName>Bulk_Renewals</relationshipName>
    <type>Lookup</type>
</CustomField>