unpackaged/main/default/objects/Bulk_Renewal__c/fields/Total_Amount_Inc_VAT__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_Inc_VAT__c</fullName>
    <label>Total Amount Inc VAT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>