unpackaged/main/default/objects/Bulk_Renewal__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Invoice_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Total_Amount_Inc_VAT__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>